# 25d-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  copy-assets.cmake  debug.cpp  debug.h  engine-math.cpp  engine-math.h  engine.cpp  engine.h  level-loader.cpp  level-loader.h  main.cpp  map.cpp  map.h  player.cpp  player.h  renderer.cpp  renderer.h  resources.cpp  resources.h  scene.cpp  scene.h
assets/: main.25p
assets/maps/: test0.25m
assets/scenes/: test0.25p
cmake/: Dependencies.cmake
entities/: CMakeLists.txt  entity.cpp  entity.h  player.cpp  player.h
math/: constants.h  functions.cpp  functions.h  math.h  transform.cpp  transform.h
math/unused/: matrix.cpp  matrix.h  trsmatrix.cpp  trsmatrix.h  vector.cpp  vector.h
